// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cirno 1`] = `
{
  "code": 0,
  "files": [],
  "signal": null,
  "stderr": "",
  "stdout": "cirno/0.0.1

Usage:
  $ cirno <command> [options]

Commands:
  init                   Initialize a new project
  list                   List all instances
  import [src] [name]    Import an instance
  export [id] [dest]     Export an instance
  clone [id] [name]      Clone an instance
  backup [id] [name]     Backup an instance
  restore [head] [base]  Restore an instance
  remove [id]            Remove an instance

For more info, run any command with the \`--help\` flag:
  $ cirno init --help
  $ cirno list --help
  $ cirno import --help
  $ cirno export --help
  $ cirno clone --help
  $ cirno backup --help
  $ cirno restore --help
  $ cirno remove --help

Options:
  -h, --help     Display this message 
  -v, --version  Display version number 
",
}
`;

exports[`cirno import ../tests/fixtures/foo 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances:
  - id: de765138-dd06-5227-a5a3-8335e54eef72
    name: unnamed
    created: '2024-08-01T16:15:00.401Z'
    updated: '2024-08-01T16:15:00.402Z'
",
      "path": "cirno.yml",
    },
    {
      "content": "{
  "name": "foo",
  "version": "1.0.0",
  "packageManager": "yarn@4.3.1"
}
",
      "path": "instances/de765138-dd06-5227-a5a3-8335e54eef72/package.json",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Successfully imported instance de765138-dd06-5227-a5a3-8335e54eef72.
",
}
`;

exports[`cirno init 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Cirno project initialized.
",
}
`;

exports[`cirno init 2`] = `
{
  "code": 1,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " Error  Project already exists. Use \`cirno init -f\` to overwrite.
",
}
`;

exports[`cirno remove de765138-dd06-5227-a5a3-8335e54eef72 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Instance de765138-dd06-5227-a5a3-8335e54eef72 is successfully removed.
",
}
`;

exports[`cirno remove de765138-dd06-5227-a5a3-8335e54eef72 2`] = `
{
  "code": 1,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " Error  Instance de765138-dd06-5227-a5a3-8335e54eef72 not found.
",
}
`;
